# WhitePatternDetection

./: CMakeLists.txt  ColorGenerator.h  ComponentMarker.h  WhitePatternDetection.cpp
Test/BinaryThresholding/: BinaryThresholding.cpp  BinaryThresholding.h  CMakeLists.txt
